# agentkit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.browser.yml  docker-compose.external.yml  docker-compose.yml  pyproject.toml  run_demo.py
.github/workflows/: ci.yml
.superpowers/sdd/: task-10-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-9-report.md
agents/customer-service/: agent.md
agents/general/: agent.md
agents/hr-recruiter/: agent.md
agents/social-growth/: agent.md
contexts/: README.md
contexts/fragments/: evidence-policy.md  json-only.md  no-hidden-reasoning.md  security-boundary.md  untrusted-data.md
data/: .gitignore
docker/initdb/: 01-vector.sql
docs/: AI_AGENT_系统学习与面试指南.md  ARCHITECTURE.md  DEPLOYMENT.md  LANGCHAIN_LANGGRAPH_UPGRADE.md  RAG_WORKFLOW.md  XHS_WEB_SEARCH.md  cost_control.md  hr_architecture_walkthrough.md
docs/framework/: 01_INTERFACE_AND_ACCESS.md  02_AGENT_ARCHITECTURE.md  03_SKILLS_TOOLS_AND_MCP.md  04_EXECUTION_RUNTIME_AND_LANGGRAPH.md  05_CONTEXT_ENGINEERING_AND_GOVERNANCE.md  06_MEMORY_AND_RAG.md  07_GOVERNANCE_AND_DURABLE_EXECUTION.md  08_EVALUATION_OBSERVABILITY_AND_COST.md  09_SECURITY_MULTI_TENANCY_AND_RELIABILITY.md  10_EXTENSION_GUIDE.md  README.md  REFERENCE.md  ROADMAP.md
docs/web/: WEB_UI_REDESIGN.md
evals/: trajectory.jsonl
evaluation/datasets/: golden.jsonl  trajectory.jsonl
evaluation/suites/: trajectory.yaml
prompts/agents/: customer_service.md  general.md  recruitment.md  router.md  social_growth.md
skills/candidate-rank/: SKILL.md  skill.yaml
skills/customer-service/: SKILL.md  skill.yaml
skills/xhs-growth-campaign/: SKILL.md  skill.yaml
src/agentkit/: __init__.py  cli.py  config.py
tenants/: company_alpha.json  company_alpha_bk.json
tests/: context_support.py
tests/integration/: test_agent_isolation.py  test_approval_api.py  test_approval_resume.py  test_build_runtime.py  test_chat_api.py  test_combined_intent_route.py  test_context_runtime.py  test_conversation_manager.py  test_conversation_projection_flow.py  test_conversation_timeline_api.py  test_durable_execution.py  test_eval_llm.py  test_executor_schema.py  test_fastpath.py  test_graph_with_fake_provider.py  test_healthz.py  test_memory_semantic.py  test_plan_graph.py  test_postgres_migrations.py  test_rbac.py  test_react_graph.py  test_repository_structure.py  test_safety_api.py  test_strategy_eval.py  test_streaming_api.py  test_timing_events.py  (+4 more)
tools/: skill_tool.py
(+426 files in other folders)
