[project]
name = "agentkit"
version = "0.1.0"
description = "Generic enterprise LLM agent framework (governed LangGraph runtime)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0,<4.0.0",
    "httpx>=0.27.0,<0.29.0",
    "jsonschema>=4.0.0,<5.0.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langgraph>=0.2.0,<0.4.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "PyYAML>=6.0,<7.0",
    "langgraph-checkpoint-sqlite>=2.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "ruff>=0.6.0,<0.9.0",
    "mypy>=1.11.0,<2.0.0",
    "pre-commit>=3.8.0,<5.0.0",
]
# Production WSGI server for container deployment (not needed for local dev).
serve = [
    "gunicorn>=22.0.0,<24.0.0",
]
# OpenTelemetry tracing (optional). Tracing stays a no-op until this is installed
# AND AGENTKIT_TRACING_ENABLED=true.
otel = [
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0,<2.0.0",
]
# PostgreSQL + pgvector backend (optional). Enable with
# AGENTKIT_STORAGE_BACKEND=postgres and AGENTKIT_VECTOR_STORE_BACKEND=postgres
# after creating the pgvector extension.
pg = [
    "psycopg[binary,pool]>=3.1,<4.0",
    "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
]
# Enterprise knowledge-base RAG: Chroma persistence plus PDF/Word/OCR loaders.
# OCR also needs a system tesseract binary and language packs.
rag = [
    "chromadb>=0.5.0,<2.0.0",
    "numpy>=1.26,<2.4",
    "pypdf>=4.0.0,<7.0.0",
    "pymupdf>=1.24.0,<2.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "pillow>=10.0.0,<13.0.0",
    "pytesseract>=0.3.10,<0.4.0",
]
# Browser-backed website research. Browser binaries are installed separately
# with `python -m playwright install chromium`.
browser = [
    "playwright>=1.48.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentkit"]

[project.scripts]
agentkit = "agentkit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
